# donkey-see-donkey-do

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: quality.yaml
donkey_see_donkey_do/: actions.py  events.py  recorder.py  simplify.py
tests/: test_events.py  test_simplify.py
